# Calculator

./: CMakeLists.txt  README.md  constants.h  containers.cpp  containers.h  define_token.cpp  define_token.h  get_token.cpp  get_token.h  grammar.cpp  grammar.h  main.cpp  states_generation.cpp  states_generation.h  std_lib_facilities.h  test.ans  test.in  test.out  token.cpp  token.h  variable.cpp  variable.h  words_treatment.cpp  words_treatment.h
